styles.css
:root {
    --primary-color: cornflowerblue;
    --secondary-color: darkblue;
    --text-color: #000;
    --content-color: lavender;
    --highlight-color: turquoise;

    --secondary-color-dark: #ffcc33;
    --text-color-dark: rgb(224, 224, 224);
    --content-color-dark: #003153;
    --highlight-color-dark: #00827f;
  }  

body {
    color: var(--text-color);
    background-color: cornflowerblue;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif, sans-serif;
    margin: 0;
    padding: 0;
    overflow:scroll;
}
body.dark {
    background-color: #003153;
    color: lavender;
}

#header {
    background-color: lavender;
    margin:auto;
    padding: 1.5em 0;
    text-align: center;
    font-family: "Consolas", "Courier New", monospace;
    font-weight: bold;
    font-size: 1.5em;

}
#header::after {
    content: "";
    clear: both;
}

#header, #footer {
    width: 100%;
    border-bottom: 3px solid darkblue;
    border-top: 3px solid darkblue;
    margin: 1em auto;
}


#footer {
    background-color: lavender;
    padding: 1.5em 0;
    text-align: center;
    font-family: "Consolas", "Courier New", monospace;
    font-weight: bold;
}
#footer-container {
    width: 40%;
    margin: auto;
}

#header.dark{
    background-color: #003153;
    color: lavender;
    border-bottom: 3px solid #ffcc33;
    border-top: 3px solid #ffcc33;
} 
#footer.dark {
    background-color: #003153 !important;
    color: lavender;
    border-bottom: 3px solid #ffcc33;
    border-top: 3px solid #ffcc33;
}

#content {
    background-color: lavender;
    border: 9px double darkblue;
    padding: 2em;
    width: 80%;
    margin:3em auto;
    position: relative;
}
#content.dark {
    background-color: #003153;
    color: lavender;
    border: #ffcc33 9px double;
}

h1, h2, h3, h4, h5, h6 {
    color: darkblue;
    font-family: "Consolas", "Courier New", monospace;
    font-weight: bold;   
}
h2 {
    margin: 1.5em auto auto 0;
    font-size: 1.5em;
}
h3 {
    margin: 1.5em auto auto 0;
}

h1.dark, h2.dark, h3.dark, h4.dark, h5.dark, h6.dark {
    color: #fff;
}

a {
    color: cornflowerblue;
    text-decoration: none;
}
a:hover {
    color: darkblue;
    text-decoration: underline;
}
a.dark {
    color: #ffcc33;
}

p.project-blurb {
    font-size: smaller;
    font-style: italic;
}

/* Highlight effect courtesy of https://codepen.io/alvarotrigo/pen/popvzVw */
.mark {
    -webkit-animation: 1.5s highlight 1.5s 1 normal forwards;
    animation: 1.5s highlight 1.5s 1 normal forwards;
    background-color: none;
    background: linear-gradient(90deg, turquoise 50%, rgba(255, 255, 255, 0) 50%);
    border-radius: 20% 25% 20% 24%;
    transform: rotate(1.5deg);
    background-size: 200% 100%;
    background-position: 100% 0;
    width: 30%;
    margin:auto;
}
@-webkit-keyframes highlight {
    to {
        background-position: 0 0;
    }
}
@keyframes highlight {
    to {
        background-position: 0 0;
    }
}
/* end credit */ 

nav a {
    color: darkblue;
    font-weight: bold;
    font-size:smaller;
    padding: auto 1em;
}
nav a:hover {
    color: cornflowerblue;
    text-decoration:none;
}  
nav a::after {
    content: " ; "; 
}
nav a:last-child::after {
    content: "";
}

nav a.dark:hover {
    color: var(--highlight-color-dark);
}

/* Highlight effect courtesy of https://codepen.io/alvarotrigo/pen/rNpaBJJ */
.highlight-container, .highlight {
    position: relative;
}
.highlight-container {
    display: inline-block;
}
.highlight-container:before {
    content: " ";
    display: block;
    height: 50%;
    width: 100%;
    margin-left: -3px;
    margin-right: -3px;
    position: absolute;
    background: turquoise;
    transform: rotate(2deg);
    top: 30px;
    left: -1px;
    border-radius: 20% 25% 20% 24%;
    padding: 3px 1px 1px 3px;
}
.highlight-container:before.dark {
    background: #00827f;
}

.mark.dark {
    background: linear-gradient(90deg, #00827f 50%, lavender 50%);
}
/* end credit */

span.prns {
    color: darkblue;
    font-style:italic;
    font-size: smaller;
}

span.skk {
    color: darkblue;
    padding: 0 .2em;
}
span.skk.dark, span.prns.dark {
    color: #ffcc33;
}

::selection {
    background: turquoise;
    color: darkblue;
}
::selection.dark {
    background: #00827f;
    color: lavender;
}


#scroll-to-top {
    z-index: 99999;
    position: fixed;
    bottom: 10px;
    right: 20px;
    background-color: darkblue;
    color: lavender;
    border: none;
    padding: .5em;
    font-size: 1.5em;
    cursor: pointer;
    border-radius: 20% 25% 20% 24%;
    transform: rotate(2deg);
}
#scroll-to-top:hover {
    background-color: turquoise;
    color: darkblue;
}
#scroll-to-top.dark {
    background-color: #ffcc33;
    color: darkblue;
}
#scroll-to-top.dark:hover {
    background-color: lavender;
    color: darkblue;
}


#dark-mode-button {
    z-index: 99999;
    position: fixed;
    top: 10px;
    right: 20px;
    font-size: 30px; 
}

